# mumble-plugin-cpp

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
.ci/travis/: build_unix.sh  build_windows.bat  install_linux.sh  install_macos.sh
.github/workflows/: build.yml  pr-checks.yml
examplePlugin/: CMakeLists.txt  README.md  plugin.cpp
examplePlugin/.cache/clangd/index/: plugin.cpp.652C4D5ED8971C0A.idx
include/: MumbleAPI.h  MumbleAPI_v_1_0_x.h  MumbleArray.h  MumblePlugin.h  MumblePlugin_v_1_0_x.h  MumbleResourceWrapper.h
include/mumble/plugin/: MumbleAPI.h  MumblePlugin.h  MumbleResourceWrapper.h
include/mumble/plugin/internal/: MumbleAPI_v_1_0_x.h
scripts/: runClangFormat.sh
src/: MumbleAPI.cpp  MumblePluginDefaultImpl.cpp  plugin.cpp
